--- a/package.json
+++ b/package.json
@@ -25,5 +25,17 @@
     "globals": "^15.14.0",
     "sass": "^1.86.0",
     "vite": "^6.1.0"
-  }
+  },
+  "description": "Frontend client for the Instock Group project.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/devisreal/Instock-client.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/devisreal/Instock-client/issues"
+  },
+  "homepage": "https://github.com/devisreal/Instock-client#readme"
 }
