--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropdown-select": "^4.11.4",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
